tests: move general tests and rename setup_locate
This patch continues the test refactoring work by moving
general tests to externs/api and cli.

Change-Id: I23f76e557f5c5d88516079c410a4593ebc41c3cb
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9154
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,15 +3,10 @@ TO_SRC=../src
 AM_CFLAGS= $(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
-ADMIN_LIB=$(TO_SRC)/admin/libphobos_admin.la
 CFG_LIB=$(TO_SRC)/cfg/libpho_cfg.la
 COMMON_LIB=$(TO_SRC)/common/libpho_common.la
-COMMUNICATION_LIB=$(TO_SRC)/communication/libpho_comm.la
 DSS_LIB=$(TO_SRC)/dss/libpho_dss.la
-LDM_LIB=$(TO_SRC)/ldm/libpho_ldm.la
 RAID1_LIB=$(TO_SRC)/layout-modules/libpho_layout_raid1.la
-SERIALIZER_LIB=$(TO_SRC)/serializer/libpho_serializer.la
-STORE_LIB=$(TO_SRC)/store/libphobos_store.la
 
 # FIXME:
 # Possibly-lost leaks appear in valgrind reports when testing acceptance.sh,
@@ -38,15 +33,10 @@ TEST_EXTENSIONS=.sh
 # 2) run TESTS and generate a summary
 
 # List of binary files to compile
-check_PROGRAMS=test_store test_dss test_scsi test_store_retry \
-	           test_bad_comm test_delete test_undelete test_raid1_split_locate
+check_PROGRAMS=test_raid1_split_locate
 
 # List of scripts which will be directly tested by make check
-tests_sh=test_dss.sh test_scsi.sh test_layouts.sh acceptance.sh	\
-	     test_store_retry.sh raid1_simple_split.sh test_undelete.sh	\
-	     raid1_split.sh test_bad_comm.sh test_resource_availability.sh \
-	     test_daemon.sh test_media_operation_flags.sh test_tag_update.sh \
-	     test_delete.sh
+tests_sh=acceptance.sh raid1_simple_split.sh raid1_split.sh test_daemon.sh
 
 # List of scripts
 check_SCRIPTS=$(tests_sh) setup_db.sh test_env.sh test_launch_daemon.sh
@@ -58,27 +48,6 @@ pre-check-local:
 
 check-local: pre-check-local
 	rm -f /tmp/phobos_test.lock
-
-test_bad_comm_SOURCES=test_bad_comm.c pho_test_utils.h
-test_bad_comm_LDADD=$(COMMON_LIB) $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
-
-test_store_SOURCES=test_store.c pho_test_utils.h pho_test_xfer_utils.h
-test_store_LDADD=$(STORE_LIB)
-
-test_dss_SOURCES=test_dss.c pho_test_utils.h
-test_dss_LDADD=$(DSS_LIB) $(CFG_LIB) $(COMMON_LIB)
-
-test_scsi_SOURCES=test_scsi.c pho_test_utils.h
-test_scsi_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB)
-
-test_store_retry_SOURCES=test_store_retry.c pho_test_utils.h pho_test_xfer_utils.h
-test_store_retry_LDADD=$(ADMIN_LIB) $(STORE_LIB)
-
-test_delete_SOURCES=test_delete.c pho_test_utils.h
-test_delete_LDADD=$(STORE_LIB)
-
-test_undelete_SOURCES=test_undelete.c pho_test_utils.h
-test_undelete_LDADD=$(STORE_LIB)
 
 test_raid1_split_locate_SOURCES=test_raid1_split_locate.c
 test_raid1_split_locate_LDADD=$(CFG_LIB) $(COMMON_LIB) $(DSS_LIB) $(RAID1_LIB)
