tests: merge tag_update/media_op_flag into test_media
Change-Id: I44c01e3565f6f3a8c9a860a4f8dd913dbc23c23a
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9175
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -25,13 +25,12 @@ check_SCRIPTS=acceptance.sh \
 	          test_extent_list.sh \
 	          test_get.sh \
 	          test_locate.sh \
-	          test_media_operation_flags.sh \
+	          test_media.sh \
 	          test_object_list.sh \
 	          test_ping.sh \
 	          test_put.sh \
 	          test_raid1_split.sh \
 	          test_resource_availability.sh \
-	          test_tag_update.sh \
 	          test_undelete.sh
 
 TESTS=$(check_SCRIPTS)
