tests: rework test_store and merge test_layouts into it
This patch also removes the "getmd" part in test_store.c as
it is unused.

Change-Id: I17b93b3aa2d0be41527b6c486954d8f4050a5911
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9179
Reviewed-by: Linter
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -41,8 +41,8 @@ check_SCRIPTS=test_locate.sh \
 	          test_undelete.sh \
 	          test_delete.sh \
 	          test_bad_comm.sh \
+	          test_store.sh \
 	          test_store_retry.sh \
-	          test_layouts.sh \
 	          test_raid1_split_locate.sh
 
 TESTS=$(check_SCRIPTS)
