test: test the synchronisation of objects
Make sure that the LRS only synchronises the objects on the
media after a write but not after a read.

Change-Id: I331208d4fc0b907e5c5656bd86c8d8d6f4fb5ca5
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9516
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Linter
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -21,6 +21,7 @@ check_PROGRAMS=medium_locker
 
 check_SCRIPTS=acceptance.sh \
 	          test_daemon.sh \
+	          test_daemon_scheduling.sh \
 	          test_delete.sh \
 	          test_extent_list.sh \
 	          test_get.sh \
