pkg: update to 1.93
Change-Id: I638bda32b28a60389d4908db514dfd73bf207ed8
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9597
Reviewed-by: Linter
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -113,6 +113,12 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_admin.la
 
 %changelog
+* Tue Nov 30 2021 - Patrice Lucas <patrice.lucas@cea.fr> - 1.93.0-1
+- LRS lock refactoring
+- Added layout parameters to migration
+- Removed layout simple and added simple alias
+- Limited sync to write operations
+
 * Fri Jul 2 2021 - Yoann Valeri <yoann.valeri@cea.fr> - 1.92.0-1
 - Locate command
 - Uuid and version options to get command
