pkg: add missing header dependencies
Change-Id: I17136512baf9166ce5eac2dd8e59ee0ac6df9a73
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9608
Reviewed-by: Linter
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -107,6 +107,10 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %files devel
 
 %{_includedir}/pho_attrs.h
+%{_includedir}/pho_comm.h
+%{_includedir}/pho_common.h
+%{_includedir}/pho_dss.h
+%{_includedir}/pho_types.h
 %{_includedir}/phobos_store.h
 %{_includedir}/phobos_admin.h
 %{_libdir}/libphobos_store.la
