--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -3,6 +3,7 @@ connect_string = dbname=phobos host=localhost user=phobos password=phobos
 
 [lrs]
 server_socket = /tmp/socklrs
+sync_time_threshold = tape=0,dir=0
 
 [tape_model]
 supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
