--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -15,6 +15,8 @@ lib_device    = /dev/changer
 server_socket = /run/phobosd/lrs
 # path of the daemon lock file
 lock_file     = /run/phobosd/phobosd.lock
+# time threshold for medium synchronization, in ms
+sync_time_threshold = tape=10000,dir=10
 
 [scsi]
 # retry count for SCSI requests
