lrs: add configuration number of requests threshold for synchronization
Change-Id: If59fc7df36480a4aaf5f75bf85d7f654cc07f181
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9674
Reviewed-by: Linter
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -17,6 +17,8 @@ server_socket = /run/phobosd/lrs
 lock_file     = /run/phobosd/phobosd.lock
 # time threshold for medium synchronization, in ms
 sync_time_threshold = tape=10000,dir=10
+# number of requests threshold for medium synchronization
+sync_nb_req_threshold = tape=5,dir=5
 
 [scsi]
 # retry count for SCSI requests
