--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -3,7 +3,8 @@ connect_string = dbname=phobos host=localhost user=phobos password=phobos
 
 [lrs]
 server_socket = /tmp/socklrs
-sync_time_threshold = tape=0,dir=0
+sync_time_threshold = tape=10000,dir=10
+sync_nb_req_threshold = tape=1,dir=1
 
 [tape_model]
 supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
