lrs: add the basic architecture of the device thread
This patch shifts the responsability of the dev_descr
struct handling from the scheduler to the device thread.

Change-Id: I4d6045a6249a1f97e644d883515a14f52b5ecf52
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9718
Reviewed-by: Linter
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -9,7 +9,10 @@ unit_files=phobosd.service
 unit_DATA=$(unit_files)
 EXTRA_DIST=$(unit_files)
 
-phobosd_SOURCES=lrs.c lrs_cfg.h lrs_cfg.c lrs_sched.h lrs_sched.c
+phobosd_SOURCES=lrs.c \
+	lrs_cfg.h lrs_cfg.c \
+	lrs_sched.h lrs_sched.c \
+	lrs_device.h lrs_device.c
 phobosd_CFLAGS=$(AM_CFLAGS)
 phobosd_LDADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la ../ldm/libpho_ldm.la \
 	      ../io/libpho_io.la ../serializer/libpho_serializer.la \
