lrs: add configurable written size threshold for synchronization
Change-Id: I9ab913c01c652aca20e58e5a039e2bc58d922f9d
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9720
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Linter
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -15,10 +15,14 @@ lib_device    = /dev/changer
 server_socket = /run/phobosd/lrs
 # path of the daemon lock file
 lock_file     = /run/phobosd/phobosd.lock
+
+# Thresholds for synchronization mechanism
 # time threshold for medium synchronization, in ms
 sync_time_threshold = tape=10000,dir=10
 # number of requests threshold for medium synchronization
 sync_nb_req_threshold = tape=5,dir=5
+# written size threshold for medium synchronization, in KiB
+sync_written_size_threshold = tape=1048576,dir=1048576
 
 [scsi]
 # retry count for SCSI requests
