--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -5,6 +5,7 @@ connect_string = dbname=phobos host=localhost user=phobos password=phobos
 server_socket = /tmp/socklrs
 sync_time_threshold = tape=10000,dir=10
 sync_nb_req_threshold = tape=1,dir=1
+sync_written_size_threshold = tape=1048576,dir=1048576
 
 [tape_model]
 supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
