io: IO adapter provides preferred I/O size
This adds a new call to I/O adapters: ioa_preferred_io_size()
which indicates the preferred I/O size for the filesystem.
This call is called by the layout before performing the I/O.

On POSIX FS, the returned value is the one from statfs.f_bsize
(e.g. 4K on a ext4 file system).
On LTFS, this value contains the optimal value for the given model of tape
(e.g. 512K on LTO6).

This can be overridden by specifying a value in the configuration
(parameter: io::io_block_size). In this case, the specified value
is used for all filesystems managed by Phobos.

Change-Id: I02944f8d0b7d4c41c7241bd1dcfb4658019a4bc0
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9871
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -58,10 +58,10 @@ default_family = tape
 default_alias = simple
 
 [io]
-# block size used for writing data to multiple media (negative values or 0 will
-# be interpreted as an absence of parameter, and the use of default value
-# sysconf(_SC_PAGESIZE))
-io_block_size = -1
+# Force the block size (in bytes) used for writing data to all media.
+# If value is null or is not specified, phobos will use the value provided
+# by the storage system (statfs.f_bsize, see statfs(2)).
+#io_block_size = 1048576
 
 [layout_raid1]
 # number of data replicates for raid1 layout (default is 2)
