doc: add bounds of configurable threshold values
Change-Id: I9f3610e82bd558f00c39ee45f7140e59c1916d90
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9738
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Linter
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -17,11 +17,14 @@ server_socket = /run/phobosd/lrs
 lock_file     = /run/phobosd/phobosd.lock
 
 # Thresholds for synchronization mechanism
-# time threshold for medium synchronization, in ms
+# time threshold for medium synchronization, in ms,
+# positive value, may be equal to 0 and lesser or equal than 2^64
 sync_time_threshold = tape=10000,dir=10
-# number of requests threshold for medium synchronization
+# number of requests threshold for medium synchronization,
+# positive value, greater than 0 and lesser or equal than 2^32
 sync_nb_req_threshold = tape=5,dir=5
-# written size threshold for medium synchronization, in KiB
+# written size threshold for medium synchronization, in KiB,
+# positive value, greater than 0 and lesser or equal than 2^54
 sync_written_size_threshold = tape=1048576,dir=1048576
 
 [scsi]
