cfg: use mutex to prevent concurrent config load and read
This patch also adds a test which runs several concurrent put operations
in different synchronized threads to test for race conditions.

Change-Id: Ia40adecc4b6a9505bf6087226ca6039754742803
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9767
Reviewed-by: Linter
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -33,7 +33,8 @@ check_PROGRAMS=test_locate \
 	           test_bad_comm \
 	           test_store_retry \
 	           test_store \
-	           test_raid1_split_locate
+	           test_raid1_split_locate \
+	           test_concurrency
 
 check_SCRIPTS=test_locate.sh \
 	          test_scsi.sh \
@@ -41,6 +42,7 @@ check_SCRIPTS=test_locate.sh \
 	          test_undelete.sh \
 	          test_delete.sh \
 	          test_bad_comm.sh \
+	          test_concurrency.sh \
 	          test_store.sh \
 	          test_store_retry.sh \
 	          test_raid1_split_locate.sh
@@ -82,3 +84,6 @@ test_store_CFLAGS=-I$(TO_TEST)
 test_raid1_split_locate_SOURCES=test_raid1_split_locate.c
 test_raid1_split_locate_LDADD=$(CFG_LIB) $(COMMON_LIB) $(DSS_LIB) $(RAID1_LIB)
 test_raid1_split_locate_CFLAGS=-I$(TO_TEST)
+
+test_concurrency_SOURCES=test_concurrency.c
+test_concurrency_LDADD=$(STORE_LIB)
