--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -20,19 +20,20 @@ TEST_EXTENSIONS=.sh
 check_PROGRAMS=medium_locker
 
 check_SCRIPTS=acceptance.sh \
-	          test_daemon.sh \
-	          test_daemon_scheduling.sh \
-	          test_delete.sh \
-	          test_extent_list.sh \
-	          test_get.sh \
-	          test_locate.sh \
-	          test_media.sh \
-	          test_object_list.sh \
-	          test_ping.sh \
-	          test_put.sh \
-	          test_raid1_split.sh \
-	          test_resource_availability.sh \
-	          test_undelete.sh
+              test_daemon.sh \
+              test_daemon_scheduling.sh \
+              test_delete.sh \
+              test_extent_list.sh \
+              test_get.sh \
+              test_group_sync.sh \
+              test_locate.sh \
+              test_media.sh \
+              test_object_list.sh \
+              test_ping.sh \
+              test_put.sh \
+              test_raid1_split.sh \
+              test_resource_availability.sh \
+              test_undelete.sh
 
 TESTS=$(check_SCRIPTS)
 
