admin: CLI and API lock clean command
Change-Id: I9fd9540f5365a5299d94635ab4969528df948f3b
Signed-off-by: Aymeric KEYEWA <keyewaa@ocre.cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9878
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -25,65 +25,71 @@ endif
 
 TEST_EXTENSIONS=.sh
 
-check_PROGRAMS=test_locate \
-	           test_scsi \
-	           test_dss \
-	           test_undelete \
-	           test_delete \
-	           test_bad_comm \
-	           test_store_retry \
-	           test_store \
-	           test_raid1_split_locate \
-	           test_concurrency
+check_PROGRAMS=test_bad_comm \
+               test_concurrency \
+               test_delete \
+               test_dss \
+               test_locate \
+               test_lock_clean \
+               test_raid1_split_locate \
+               test_scsi \
+               test_store \
+               test_store_retry \
+               test_undelete
 
-check_SCRIPTS=test_locate.sh \
-	          test_scsi.sh \
-	          test_dss.sh \
-	          test_undelete.sh \
-	          test_delete.sh \
-	          test_bad_comm.sh \
-	          test_concurrency.sh \
-	          test_store.sh \
-	          test_store_retry.sh \
-	          test_raid1_split_locate.sh
+check_SCRIPTS=test_bad_comm.sh \
+              test_concurrency.sh \
+              test_delete.sh \
+              test_dss.sh \
+              test_locate.sh \
+              test_lock_clean.sh \
+              test_raid1_split_locate.sh \
+              test_scsi.sh \
+              test_store.sh \
+              test_store_retry.sh \
+              test_undelete.sh
 
 TESTS=$(check_SCRIPTS)
-
-test_locate_SOURCES=test_locate.c ../../test_setup.c
-test_locate_LDADD=$(STORE_LIB) $(ADMIN_LIB) $(DSS_LIB) $(LAYOUT_LIB)
-test_locate_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss -I$(TO_TEST)
-
-test_scsi_SOURCES=test_scsi.c
-test_scsi_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB)
-test_scsi_CFLAGS=-I$(TO_TEST)
-
-test_dss_SOURCES=test_dss.c
-test_dss_LDADD=$(DSS_LIB) $(CFG_LIB) $(COMMON_LIB)
-test_dss_CFLAGS=-I$(TO_TEST)
-
-test_undelete_SOURCES=test_undelete.c
-test_undelete_LDADD=$(STORE_LIB)
-test_undelete_CFLAGS=-I$(TO_TEST)
-
-test_delete_SOURCES=test_delete.c
-test_delete_LDADD=$(STORE_LIB)
-test_delete_CFLAGS=-I$(TO_TEST)
 
 test_bad_comm_SOURCES=test_bad_comm.c
 test_bad_comm_LDADD=$(COMMON_LIB) $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
 test_bad_comm_CFLAGS=-I$(TO_TEST)
 
-test_store_retry_SOURCES=test_store_retry.c
-test_store_retry_LDADD=$(ADMIN_LIB) $(STORE_LIB)
-test_store_retry_CFLAGS=-I$(TO_TEST)
+test_concurrency_SOURCES=test_concurrency.c
+test_concurrency_LDADD=$(STORE_LIB)
 
-test_store_SOURCES=test_store.c
-test_store_LDADD=$(STORE_LIB)
-test_store_CFLAGS=-I$(TO_TEST)
+test_delete_SOURCES=test_delete.c
+test_delete_LDADD=$(STORE_LIB)
+test_delete_CFLAGS=-I$(TO_TEST)
+
+test_dss_SOURCES=test_dss.c
+test_dss_LDADD=$(DSS_LIB) $(CFG_LIB) $(COMMON_LIB)
+test_dss_CFLAGS=-I$(TO_TEST)
+
+test_locate_SOURCES=test_locate.c ../../test_setup.c
+test_locate_LDADD=$(STORE_LIB) $(ADMIN_LIB) $(DSS_LIB) $(LAYOUT_LIB)
+test_locate_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss -I$(TO_TEST)
+
+test_lock_clean_SOURCES=test_lock_clean.c ../../test_setup.c
+test_lock_clean_LDADD=$(ADMIN_LIB) $(STORE_LIB)
+test_lock_clean_CFLAGS=-I$(TO_TEST)
 
 test_raid1_split_locate_SOURCES=test_raid1_split_locate.c
 test_raid1_split_locate_LDADD=$(CFG_LIB) $(COMMON_LIB) $(DSS_LIB) $(RAID1_LIB)
 test_raid1_split_locate_CFLAGS=-I$(TO_TEST)
 
-test_concurrency_SOURCES=test_concurrency.c
-test_concurrency_LDADD=$(STORE_LIB)
+test_scsi_SOURCES=test_scsi.c
+test_scsi_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB)
+test_scsi_CFLAGS=-I$(TO_TEST)
+
+test_store_SOURCES=test_store.c
+test_store_LDADD=$(STORE_LIB)
+test_store_CFLAGS=-I$(TO_TEST)
+
+test_store_retry_SOURCES=test_store_retry.c
+test_store_retry_LDADD=$(ADMIN_LIB) $(STORE_LIB)
+test_store_retry_CFLAGS=-I$(TO_TEST)
+
+test_undelete_SOURCES=test_undelete.c
+test_undelete_LDADD=$(STORE_LIB)
+test_undelete_CFLAGS=-I$(TO_TEST)
