--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -41,7 +41,8 @@ check_SCRIPTS=acceptance.sh \
               test_raid1_split.sh \
               test_resource_availability.sh \
               test_resource_management.sh \
-              test_undelete.sh
+              test_undelete.sh \
+              test_lock_clean.sh
 
 TESTS=$(check_SCRIPTS)
 
