cli: add `phobos drive delete` command
Change-Id: If296bc67f5f54bb024c11208858a46ad5f4bf0ac
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9980
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -40,6 +40,7 @@ check_SCRIPTS=acceptance.sh \
               test_put.sh \
               test_raid1_split.sh \
               test_resource_availability.sh \
+              test_resource_management.sh \
               test_undelete.sh
 
 TESTS=$(check_SCRIPTS)
