cli,api: basic implementation of phobos drive status
Add 'phobos drive status' command to the CLI and the function
phobos_admin_device_status to the admin API.

Prepare the implementation of the drive status command.

Change-Id: Iec3a26733a4dd864f729e5a3e3df2cd5106a833c
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10121
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -27,6 +27,7 @@ check_PROGRAMS=controlled_store \
 
 check_SCRIPTS=acceptance.sh \
               test_daemon.sh \
+              test_daemon_monitoring.sh \
               test_daemon_scheduling.sh \
               test_delete.sh \
               test_extent_list.sh \
