cfg: rename LRS sync parameters
sync_time_threshold -> sync_time_ms
sync_nb_req_threshold -> sync_nb_req
sync_written_size_threshold -> sync_wsize_kb

Change-Id: I3b89b2e7b70b06c8351fada9fad0095ea4b1c858
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10192
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -19,13 +19,13 @@ lock_file     = /run/phobosd/phobosd.lock
 # Thresholds for synchronization mechanism
 # time threshold for medium synchronization, in ms,
 # positive value, may be equal to 0 and lesser or equal than 2^64
-sync_time_threshold = tape=10000,dir=10
+sync_time_ms = tape=10000,dir=10
 # number of requests threshold for medium synchronization,
 # positive value, greater than 0 and lesser or equal than 2^32
-sync_nb_req_threshold = tape=5,dir=5
+sync_nb_req = tape=5,dir=5
 # written size threshold for medium synchronization, in KiB,
 # positive value, greater than 0 and lesser or equal than 2^54
-sync_written_size_threshold = tape=1048576,dir=1048576
+sync_wsize_kb = tape=1048576,dir=1048576
 
 [scsi]
 # retry count for SCSI requests
