--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -3,9 +3,9 @@ connect_string = dbname=phobos host=localhost user=phobos password=phobos
 
 [lrs]
 server_socket = /tmp/socklrs
-sync_time_threshold = tape=10000,dir=10
-sync_nb_req_threshold = tape=1,dir=1
-sync_written_size_threshold = tape=1048576,dir=1048576
+sync_time_ms = tape=10000,dir=10
+sync_nb_req = tape=1,dir=1
+sync_wsize_kb = tape=1048576,dir=1048576
 
 [tape_model]
 supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
