test: add two concurrent formats test
Change-Id: I330af41d796046757a67e043add0916bcf6b617e
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10195
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -33,8 +33,10 @@ check_SCRIPTS=acceptance.sh \
               test_extent_list.sh \
               test_get.sh \
               test_group_sync.sh \
+              test_format.sh \
               test_ldm.sh \
               test_locate.sh \
+              test_lock_clean.sh \
               test_media.sh \
               test_object_list.sh \
               test_ping.sh \
@@ -42,8 +44,7 @@ check_SCRIPTS=acceptance.sh \
               test_raid1_split.sh \
               test_resource_availability.sh \
               test_resource_management.sh \
-              test_undelete.sh \
-              test_lock_clean.sh
+              test_undelete.sh
 
 TESTS=$(check_SCRIPTS)
 
